# prettycardboard

./: .env.example  .gitignore  DEVELOPER.md  PROTOCOL.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: desktop-build.yml
docs/: ARCHITECTURE.md  README.md  client.md  server.md  table.md  testing.md
playtest/: README.md  lib.js  package-lock.json  package.json  run-all.js  seed.js
playtest/scenarios/: ai-match.js  chaos-monkey.js  commander-pod.js  cyberpunk-table.js  locked-combat.js  restart-resume.js  standard-duel.js  timeline-persist.js  vs-bot.js
scripts/: build-updater-manifest.mjs  dev-server.mjs  gen-bot-data.mjs  redeploy.mjs  release-mac.mjs  sync-catalog.mjs  sync-cyberpunk.mjs  sync-precons.mjs
server/: Cargo.toml
server/deploy/: Caddyfile.snippet  prettycardboard.service
server/src/: api.rs  bot.rs  db.rs  game.rs  main.rs  rooms.rs  ws.rs
server/src/data/: bot_data.json
server/src/game/: turns.rs
src/: dice-box-threejs.d.ts  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/app/: App.tsx  BrowseSidebarNav.tsx  CustomizeModal.tsx  RouteSidebar.tsx  SettingsModal.tsx  app.css  cyberpunk-accent.css  i18n.ts  preferences.ts  router.ts  tauri.ts  updater.ts
src/app/components/: ArtPicker.tsx  BrowseCatalog.tsx  CardPopup.tsx  DeckPreviewModal.tsx  DeckStack.tsx  (+22 more)
src/data/: catalog.json  cyberpunk-cards.json  gamechangers.json  precon-ids.json  precons.json
(+93 files in other folders)
