[package]
name = "prettycardboard-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal", "process"] }
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
rand = "0.9"
dashmap = "6"
futures-util = "0.3"
argon2 = { version = "0.5", features = ["std"] }

[profile.release]
lto = true
